cmake_minimum_required(VERSION 2.8)
project(pneumatic)

set(GRAPHICS_SUBDIR "${PROJECT_SOURCE_DIR}/graphics")
set(INPUT_SUBDIR "${PROJECT_SOURCE_DIR}/input")
set(SOUND_SUBDIR "${PROJECT_SOURCE_DIR}/sound")
set(UTILS_SUBDIR "${PROJECT_SOURCE_DIR}/utils")
set(THIRDPARTY_SUBDIR "${PROJECT_SOURCE_DIR}/thirdparty")

include_directories(
	"${PNEUMATIC_GRAPHICS_INCLUDE_DIRS}"
	"${PNEUMATIC_INPUT_INCLUDE_DIRS}"
	"${PNEUMATIC_SOUND_INCLUDE_DIRS}"
	"${PNEUMATIC_UTILS_INCLUDE_DIRS}"
	"${GLM_INCLUDE_DIRS}")

add_library("${PROJECT_NAME}" STATIC
	$<TARGET	_OBJECTS:"${PNEUMATIC_GRAPHICS_LIBRARIES}">
	$<TARGET	_OBJECTS:"${PNEUMATIC_INPUT_LIBRARIES}">
	$<TARGET	_OBJECTS:"${PNEUMATIC_SOUND_LIBRARIES}">
	$<TARGET	_OBJECTS:"${PNEUMATIC_INPUT_LIBRARIES}">
	$<TARGET	_OBJECTS:"${PNEUMATIC_THIRDPARTY_LIBRARIES}">)
